# impact_of_l2_regularization_on_20260421_202155_71e856f3

./: .gitignore  .resource_finder_complete  README.md  REPORT.md  STATE.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: failures.jsonl  idea.yaml  phase_summary_experiment_runner_20260515_191331_120305.json  phase_summary_resource_finder.json  pipeline_results.json  pipeline_state.json  state.json  state_history.jsonl  state_snapshots.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  execution_codex_20260515_190836_006021_transcript.jsonl  execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  research_prompt_latest.txt  resource_finder_claude_transcript.jsonl  resource_finder_codex_20260515_190628_605216_transcript.jsonl  resource_finder_codex_transcript.jsonl  resource_finder_prompt_latest.txt  session_instructions.txt  session_instructions_20260515_190835_994549.txt
paper_draft/: OUTLINE.md  main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: aggregate_results.tex  dataset_results.tex  datasets.tex
papers/: README.md
papers/pages_grokking/: power_et_al_2022_grokking_manifest.txt
results/: dataset_summary.csv  eda_summary.csv  environment.json  metrics.json  per_run_results.csv  regularization_grid_results.csv  run_manifest.json  statistical_tests.json
(+4 files in other folders)
