[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "matplotlib>=3.10.8",
    "pandas",
    "pypdf",
    "requests",
    "scikit-learn",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "ucimlrepo",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_workspace"]
